@@ -1,3 +1,8 @@
+2004-08-02  Erez Zadok  <ezk@cs.sunysb.edu>
+
+	* amq/pawd.c (find_mt): recognize "host" type mounts.  Patch from
+	Dan Nelson <dnelson@allantgroup.com>.
+
 2004-07-30  Erez Zadok  <ezk@cs.sunysb.edu>
 
 	* doc/am-utils.texi, NEWS: minor typos fixed.
